# socketkinect

./: CMakeLists.txt  README.md  readme.txt
src/: OniPlatform.h  OniPlatformLinux-Arm.h  OniSampleUtilities.h  Socket.h  main.cpp  main_3.cpp
